--- a/public/css/back.css
+++ b/public/css/back.css
@@ -12587,3 +12587,67 @@ fieldset:disabled .btn {
   }
 }
 
+.navbar {
+  background: #2E2E37;
+  height: 80px;
+}
+
+@media screen and (max-width: 991px) {
+  .navbar {
+    height: 110px;
+  }
+}
+
+.navbar img {
+  width: auto;
+  height: 80px;
+}
+
+.navbar .offcanvas {
+  background: #2E2E37;
+}
+
+.navbar .offcanvas .navbar-nav {
+  width: calc(100% - 106.667px);
+}
+
+.navbar .offcanvas .navbar-nav a {
+  color: #fff;
+  font-size: 0.9rem;
+  font-weight: 300;
+}
+
+.navbar .offcanvas .navbar-nav a:hover {
+  color: #f5bc41;
+  transition: all 0.2s linear;
+}
+
+.navbar .offcanvas .navbar-nav a:focus {
+  display: block;
+  color: #f5bc41;
+  box-shadow: inset 0 -3px 0 #f5bc41;
+}
+
+.navbar .offcanvas .navbar-nav .dropdown-item:hover {
+  box-shadow: 0 0 0 #000;
+  color: #fff;
+}
+
+.navbar .offcanvas .navbar-nav .dropdown-item::after {
+  position: absolute;
+  top: -10px;
+  left: 21px;
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
+  border-bottom: 15px solid #343a40;
+  content: "";
+  display: block;
+  z-index: 2;
+  transition: all 200ms linear;
+}
+
+.navbar .offcanvas .navbar-nav .dropdown-item::after img {
+  width: 80px;
+  height: 80px;
+}
+
